# Perplexica-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
perplexica_cli/: __init__.py  api.py  config.py  display.py  main.py
