[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexica-cli"
version = "0.1.0"
description = "A terminal client for Perplexica AI-powered search engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
perplexica = "perplexica_cli.main:cli"

[tool.setuptools.packages.find]
include = ["perplexica_cli*"]
